src/index.scss
:root {
  --max-content-height: 70vh;
  --content-padding: 20px;
}

*,
html {
  box-sizing: border-box;
}

*,
*:before,
*:after {
  box-sizing: inherit;
}

body {
  margin: 0;
  padding: 0;
  font-family: sans-serif;

  &.no-scroll {
    overflow: hidden;
  }
}

img,
video {
  margin: 0;
  padding: 0;
  display: block;
}

button {
  cursor: pointer;
  border: none;
  background: none;
  color: inherit;
  padding: 0;
  // outline: none;
}

a {
  text-decoration: none;
}

pre {
  overflow-x: scroll;
  -webkit-overflow-scrolling: touch; /* Lets it scroll lazy */
  background: #282c35;
  color: #c6cdd8;
  padding: 10px;
  border-radius: 5px;
  font-size: 14px;
}

:not(pre) > code {
  display: inline-block;
  border: 1px solid #dddddd;
  background: #fcfcfc;
  color: #e95656;
  padding: 2px 5px;
  border-radius: 2px;
}

blockquote {
  border-left: 1px solid;
  margin-left: 5px;
  opacity: 0.7;
  padding: 1px 15px;
}

// reddit text content
.md {
  word-break: break-word;
}

.main-content {
  margin-top: 70px;
}

